<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <TextView
        android:id="@+id/tvWelcomeAdmin"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/updateProfile"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_updateProfile"
        android:onClick="updateProfile"/>



    <Button
        android:id="@+id/usersList"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showUsers"
        android:onClick="usersList"/>


    <Button
        android:id="@+id/showReclamations"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showReclamations"
        android:onClick="showReclamations"/>

    <Button
        android:id="@+id/addRule"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addRule"
        android:onClick="addRule"/>

    <Button
        android:id="@+id/rulesList"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showRules"
        android:onClick="rulesList"/>
    <Button
        android:id="@+id/addObjectif"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addObjectif"
        android:onClick="addObjectif"/>

</LinearLayout>